tests/ui/errors/snapshots/infer_match_arm_calls_void_function_in_value_position.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:13:15]
 12 │     Ok(m) => m,
 13 │     Err(e) => report(e),
    ·               ────┬────
    ·                   ╰── this branch produces `()`, not `Match`
 14 │   }
    ╰────
  help: All branches must produce the same type when used as a value · code: [infer.type_mismatch]
