tests/ui/errors/snapshots/infer_member_not_found_expect_method_on_option.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Member not found
   ╭─[test.lis:3:3]
 2 │ fn test(opt: Option<int>) -> int {
 3 │   opt.expect("must be set")
   ·   ─────┬────
   ·        ╰── no member `expect` on type `Option<int>`
 4 │ }
   ╰────
  help: Lisette does not provide `expect()`. Use `?` to propagate, `match` to handle both cases (e.g. `match <expr> { Some(x) => x, None => ... }`), `let else` for early exit, or `unwrap_or(default)` for a fallback · code: [infer.member_not_found]
