tests/ui/errors/snapshots/infer_member_not_found_unwrap_method_on_result.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Member not found
   ╭─[test.lis:3:3]
 2 │ fn test(res: Result<int, error>) -> int {
 3 │   res.unwrap()
   ·   ─────┬────
   ·        ╰── no member `unwrap` on type `Result<int, error>`
 4 │ }
   ╰────
  help: Lisette does not provide `unwrap()`. Use `?` to propagate, `match` to handle both cases (e.g. `match <expr> { Ok(x) => x, Err(e) => ... }`), `let else` for early exit, or `unwrap_or(default)` for a fallback · code: [infer.member_not_found]
